--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         <div class="buttons">
 
           <!-- YES Button -->
-          <button class="btn yes" type="button">
+         <button class="btn yes" onclick="window.location.href='yes.html'">
             YES - of courseeee
-          </button>
+        </button>
+
 
           <!-- NO Button -->
          <button class="btn no" type="button">
