upgrade yes page

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         <div class="buttons">
 
           <!-- YES Button -->
-         <button class="btn yes" onclick="window.location.href='yes.html'">
+         <button class="btn yes" type="button" onclick="handleYesClick()">
             YES - of courseeee
         </button>
+
 
 
           <!-- NO Button -->
@@ -96,6 +97,38 @@
     }
 
   });
+
+// 💗 Herzen erstellen
+function createHeart() {
+  const heart = document.createElement("div");
+  heart.classList.add("heart");
+  heart.innerHTML = "🩷";
+
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.animationDuration = (Math.random() * 2 + 3) + "s";
+
+  document.body.appendChild(heart);
+
+  setTimeout(() => {
+    heart.remove();
+  }, 5000);
+}
+
+// 💕 Herz-Regen starten
+function startHearts() {
+  setInterval(createHeart, 300);
+}
+
+function handleYesClick() {
+  startHearts();
+
+  // nach 2 Sekunden zur yes.html weiterleiten
+  setTimeout(() => {
+    window.location.href = "yes.html";
+  }, 3000);
+}
+
+
 </script>
 
   </body>
