add letter page

--- a/yes.html
+++ b/yes.html
@@ -17,7 +17,7 @@
       <p class="subtitle">Wir sind zwar physisch gerade bisschen getrennt, aber i still got something for you. Bist du ready??</p>
 
       <div class="buttons">
-        <button class="btn yes" onclick="goNext()">
+        <button class="btn yes" onclick="window.location.href='letter.html'">
           JAAAAA (nein ist keine option 😛)
         </button>
       </div>
